// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RangeSlider /> renders with boundaries 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className={undefined}
    onTouchStart={[Function]}
>
    <div
        className="undefined css-12vo5ad"
    >
        <div
            className="undefined css-10eto0a"
            style={
                Object {
                    "left": "0%",
                    "right": "0%",
                    "transition": null,
                  }
            }
        >
            <RangeSliderHandle
                active={false}
                classNames={Object {}}
                index={0}
                onTouchStart={[Function]}
            />
            <RangeSliderHandle
                active={false}
                classNames={Object {}}
                index={1}
                onTouchStart={[Function]}
            />
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className={undefined}
      onTouchStart={[Function]}
>
      <div
            className="undefined css-12vo5ad"
      >
            <div
                  className="undefined css-10eto0a"
                  style={
                        Object {
                              "left": "0%",
                              "right": "0%",
                              "transition": null,
                            }
                  }
            >
                  <RangeSliderHandle
                        active={false}
                        classNames={Object {}}
                        index={0}
                        onTouchStart={[Function]}
                  />
                  <RangeSliderHandle
                        active={false}
                        classNames={Object {}}
                        index={1}
                        onTouchStart={[Function]}
                  />
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <RangeSlider
        animationSpeed={500}
        classNames={Object {}}
        easing="linear"
        factor={2}
        max={100}
        min={0}
        onChange={null}
        resolution={1}
        styles={Object {}}
        value={
                Array [
                        0,
                        100,
                      ]
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": RangeSlider {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "domElement": null,
        "draggedHandle": null,
        "draggedHandlePixelOffset": 0,
        "handleRangeTouch": [Function],
        "handleTouchEnd": [Function],
        "handleTouchMove": [Function],
        "handleTouchStart": [Function],
        "props": Object {
          "animationSpeed": 500,
          "classNames": Object {},
          "easing": "linear",
          "factor": 2,
          "max": 100,
          "min": 0,
          "onChange": null,
          "resolution": 1,
          "styles": Object {},
          "value": Array [
            0,
            100,
          ],
        },
        "refs": Object {},
        "state": Object {
          "rangeMax": 1,
          "rangeMin": 0,
        },
        "touchOffset": 0,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className={undefined}
          onTouchStart={[Function]}
>
          <div
                    className="undefined css-12vo5ad"
          >
                    <div
                              className="undefined css-10eto0a"
                              style={
                                        Object {
                                                  "left": "0%",
                                                  "right": "0%",
                                                  "transition": null,
                                                }
                              }
                    >
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={0}
                                        onTouchStart={[Function]}
                              />
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={1}
                                        onTouchStart={[Function]}
                              />
                    </div>
          </div>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className={undefined}
          onTouchStart={[Function]}
>
          <div
                    className="undefined css-12vo5ad"
          >
                    <div
                              className="undefined css-10eto0a"
                              style={
                                        Object {
                                                  "left": "0%",
                                                  "right": "0%",
                                                  "transition": null,
                                                }
                              }
                    >
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={0}
                                        onTouchStart={[Function]}
                              />
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={1}
                                        onTouchStart={[Function]}
                              />
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <RangeSlider
    animationSpeed={500}
    classNames={Object {}}
    easing="linear"
    factor={2}
    max={100}
    min={0}
    onChange={null}
    resolution={1}
    styles={Object {}}
    value={
        Array [
            0,
            100,
          ]
    }
/>,
}
`;

exports[`<RangeSlider /> renders without a value pair 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className={undefined}
    onTouchStart={[Function]}
>
    <div
        className="undefined css-12vo5ad"
    >
        <div
            className="undefined css-10eto0a"
            style={
                Object {
                    "left": "10%",
                    "right": "50%",
                    "transition": null,
                  }
            }
        >
            <RangeSliderHandle
                active={false}
                classNames={Object {}}
                index={0}
                onTouchStart={[Function]}
            />
            <RangeSliderHandle
                active={false}
                classNames={Object {}}
                index={1}
                onTouchStart={[Function]}
            />
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className={undefined}
      onTouchStart={[Function]}
>
      <div
            className="undefined css-12vo5ad"
      >
            <div
                  className="undefined css-10eto0a"
                  style={
                        Object {
                              "left": "10%",
                              "right": "50%",
                              "transition": null,
                            }
                  }
            >
                  <RangeSliderHandle
                        active={false}
                        classNames={Object {}}
                        index={0}
                        onTouchStart={[Function]}
                  />
                  <RangeSliderHandle
                        active={false}
                        classNames={Object {}}
                        index={1}
                        onTouchStart={[Function]}
                  />
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <RangeSlider
        animationSpeed={500}
        classNames={Object {}}
        easing="linear"
        factor={2}
        max={100}
        min={0}
        onChange={null}
        resolution={1}
        styles={Object {}}
        value={
                Array [
                        10,
                        50,
                      ]
        }
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": RangeSlider {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "domElement": null,
        "draggedHandle": null,
        "draggedHandlePixelOffset": 0,
        "handleRangeTouch": [Function],
        "handleTouchEnd": [Function],
        "handleTouchMove": [Function],
        "handleTouchStart": [Function],
        "props": Object {
          "animationSpeed": 500,
          "classNames": Object {},
          "easing": "linear",
          "factor": 2,
          "max": 100,
          "min": 0,
          "onChange": null,
          "resolution": 1,
          "styles": Object {},
          "value": Array [
            10,
            50,
          ],
        },
        "refs": Object {},
        "state": Object {
          "rangeMax": 0.5,
          "rangeMin": 0.1,
        },
        "touchOffset": 0,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className={undefined}
          onTouchStart={[Function]}
>
          <div
                    className="undefined css-12vo5ad"
          >
                    <div
                              className="undefined css-10eto0a"
                              style={
                                        Object {
                                                  "left": "10%",
                                                  "right": "50%",
                                                  "transition": null,
                                                }
                              }
                    >
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={0}
                                        onTouchStart={[Function]}
                              />
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={1}
                                        onTouchStart={[Function]}
                              />
                    </div>
          </div>
</div>,
        "_debugID": 6,
        "_renderedOutput": <div
          className={undefined}
          onTouchStart={[Function]}
>
          <div
                    className="undefined css-12vo5ad"
          >
                    <div
                              className="undefined css-10eto0a"
                              style={
                                        Object {
                                                  "left": "10%",
                                                  "right": "50%",
                                                  "transition": null,
                                                }
                              }
                    >
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={0}
                                        onTouchStart={[Function]}
                              />
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={1}
                                        onTouchStart={[Function]}
                              />
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <RangeSlider
    animationSpeed={500}
    classNames={Object {}}
    easing="linear"
    factor={2}
    max={100}
    min={0}
    onChange={null}
    resolution={1}
    styles={Object {}}
    value={
        Array [
            10,
            50,
          ]
    }
/>,
}
`;

exports[`<RangeSlider /> renders without boundaries 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className={undefined}
    onTouchStart={[Function]}
>
    <div
        className="undefined css-12vo5ad"
    >
        <div
            className="undefined css-10eto0a"
            style={
                Object {
                    "left": "0%",
                    "right": "0%",
                    "transition": null,
                  }
            }
        >
            <RangeSliderHandle
                active={false}
                classNames={Object {}}
                index={0}
                onTouchStart={[Function]}
            />
            <RangeSliderHandle
                active={false}
                classNames={Object {}}
                index={1}
                onTouchStart={[Function]}
            />
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className={undefined}
      onTouchStart={[Function]}
>
      <div
            className="undefined css-12vo5ad"
      >
            <div
                  className="undefined css-10eto0a"
                  style={
                        Object {
                              "left": "0%",
                              "right": "0%",
                              "transition": null,
                            }
                  }
            >
                  <RangeSliderHandle
                        active={false}
                        classNames={Object {}}
                        index={0}
                        onTouchStart={[Function]}
                  />
                  <RangeSliderHandle
                        active={false}
                        classNames={Object {}}
                        index={1}
                        onTouchStart={[Function]}
                  />
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <RangeSlider
        animationSpeed={500}
        classNames={Object {}}
        easing="linear"
        factor={2}
        max={100}
        min={0}
        onChange={null}
        resolution={1}
        styles={Object {}}
        value={
                Array [
                        0,
                        100,
                      ]
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": RangeSlider {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "domElement": null,
        "draggedHandle": null,
        "draggedHandlePixelOffset": 0,
        "handleRangeTouch": [Function],
        "handleTouchEnd": [Function],
        "handleTouchMove": [Function],
        "handleTouchStart": [Function],
        "props": Object {
          "animationSpeed": 500,
          "classNames": Object {},
          "easing": "linear",
          "factor": 2,
          "max": 100,
          "min": 0,
          "onChange": null,
          "resolution": 1,
          "styles": Object {},
          "value": Array [
            0,
            100,
          ],
        },
        "refs": Object {},
        "state": Object {
          "rangeMax": 1,
          "rangeMin": 0,
        },
        "touchOffset": 0,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className={undefined}
          onTouchStart={[Function]}
>
          <div
                    className="undefined css-12vo5ad"
          >
                    <div
                              className="undefined css-10eto0a"
                              style={
                                        Object {
                                                  "left": "0%",
                                                  "right": "0%",
                                                  "transition": null,
                                                }
                              }
                    >
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={0}
                                        onTouchStart={[Function]}
                              />
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={1}
                                        onTouchStart={[Function]}
                              />
                    </div>
          </div>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className={undefined}
          onTouchStart={[Function]}
>
          <div
                    className="undefined css-12vo5ad"
          >
                    <div
                              className="undefined css-10eto0a"
                              style={
                                        Object {
                                                  "left": "0%",
                                                  "right": "0%",
                                                  "transition": null,
                                                }
                              }
                    >
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={0}
                                        onTouchStart={[Function]}
                              />
                              <RangeSliderHandle
                                        active={false}
                                        classNames={Object {}}
                                        index={1}
                                        onTouchStart={[Function]}
                              />
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <RangeSlider
    animationSpeed={500}
    classNames={Object {}}
    easing="linear"
    factor={2}
    max={100}
    min={0}
    onChange={null}
    resolution={1}
    styles={Object {}}
    value={
        Array [
            0,
            100,
          ]
    }
/>,
}
`;
